rnsc/tests/snapshots/error-lexer-type_hints-at_Utf8.snap
---
source: rns-asm/tests/rns_test.rs
assertion_line: 210
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
@Utf8
----- STDERR -----
[E-005] Error: unknown type hint
   ╭─[ test_data/integration/error/lexer/type_hints/at_Utf8.rns:1:1 ]
   │
 1 │ @Utf8
   │ ──┬──  
   │   ╰──── '@Utf8' is not a recognized type hint
   │ 
   │ Help: Did you mean '@utf8'?
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-005
───╯
----- HASH -----
not generated
